package com.wolda.Obst;

public class Obst {
    private int gattung;

    public Obst(int gattung) {
        this.gattung = gattung;
    }

    public int getGattung() {
        return gattung;
    }

    public int getSusgrad(){
        return getSusgrad();
    }
}
