@startuml

title __TESTVERBESSERUNG's Class Diagram__\n

  namespace com.wolda {
    class com.wolda.Bauer {
    }
  }
  

  namespace com.wolda {
    namespace Baum {
      class com.wolda.Baum.ApfelBaum {
      }
    }
  }
  

  namespace com.wolda {
    namespace Baum {
      abstract class com.wolda.Baum.Baum {
      }
    }
  }
  

  namespace com.wolda {
    namespace Baum {
      class com.wolda.Baum.BirnenBaum {
      }
    }
  }
  

  namespace com.wolda {
    namespace Baum {
      class com.wolda.Baum.NadelBaum {
      }
    }
  }
  

  namespace com.wolda {
    namespace Baum {
      abstract class com.wolda.Baum.ObstBaum {
      }
    }
  }
  

  namespace com.wolda {
    class com.wolda.Main {
    }
  }
  

  namespace com.wolda {
    namespace Obst {
      class com.wolda.Obst.Apfel {
      }
    }
  }
  

  namespace com.wolda {
    namespace Obst {
      class com.wolda.Obst.Birne {
      }
    }
  }
  

  namespace com.wolda {
    namespace Obst {
      class com.wolda.Obst.Obst {
      }
    }
  }
  

  com.wolda.Baum.ApfelBaum -up-|> com.wolda.Baum.ObstBaum
  com.wolda.Baum.BirnenBaum -up-|> com.wolda.Baum.ObstBaum
  com.wolda.Baum.NadelBaum -up-|> com.wolda.Baum.Baum
  com.wolda.Baum.ObstBaum -up-|> com.wolda.Baum.Baum
  com.wolda.Obst.Apfel -up-|> com.wolda.Obst.Obst
  com.wolda.Obst.Birne -up-|> com.wolda.Obst.Obst


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
